more collapse fixes

--- a/editor/css/trotamundos.css
+++ b/editor/css/trotamundos.css
@@ -90,7 +90,7 @@ a:visited {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .draggable {
@@ -103,15 +103,19 @@ a:visited {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     cursor: pointer;
 }
 
 .icon {
     cursor: move;
-    margin-right: 25px;
+    margin-left: 10px;
     width: 96px;
     height: 96px;
+}
+
+.expand-icon {
+    margin-right: 10px;
 }
 
 .icon-title {
@@ -125,6 +129,7 @@ a:visited {
     font-size: 24px;
     width: 100%;
     text-align: right;
+    margin-right: 10px;
 }
 
 .text-title {
@@ -162,6 +167,7 @@ a:visited {
     text-transform: uppercase;
     font-weight: bold;
     font-size: 40px;
+    width: 570px;
 }
 
 .gallery-container {
